--- a/app/src/main/res/layout/a_radio.xml
+++ b/app/src/main/res/layout/a_radio.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.studio21.android.view.activity.RadioActivity">
 
+    <fragment
+        android:id="@+id/radio"
+        android:name="com.studio21.android.view.fragment.RadioFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </FrameLayout>
