--- a/app/src/main/res/layout/f_radio.xml
+++ b/app/src/main/res/layout/f_radio.xml
@@ -20,7 +20,7 @@
         android:layout_height="280dp"
         android:scaleType="fitCenter"
         android:layout_marginTop="16dp"
-        android:background="#cccccc" />
+        android:src="@mipmap/ic_art_placeholder" />
 
     <LinearLayout
         android:layout_width="312dp"
@@ -49,7 +49,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="title"
         android:textColor="@color/primary_text"
         android:textSize="20sp" />
 
@@ -58,7 +57,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="subtitle"
         android:textColor="@color/hint_text"
         android:textSize="16sp" />
 
