--- a/app/src/main/res/layout/f_radio.xml
+++ b/app/src/main/res/layout/f_radio.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,64 +8,95 @@
     tools:context="com.studio21.android.view.fragment.RadioFragment">
 
     <ImageView
+        android:id="@+id/studio"
         android:layout_width="280dp"
         android:layout_height="76dp"
-        android:layout_marginTop="24dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/ic_logo" />
 
-    <ImageView
-        android:id="@+id/art"
-        android:layout_width="280dp"
-        android:layout_height="280dp"
-        android:layout_marginTop="16dp"
-        android:scaleType="fitCenter"
-        android:src="@mipmap/ic_notification_placeholder" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/control"
+        android:layout_below="@+id/studio"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/art"
+                android:layout_width="280dp"
+                android:layout_height="280dp"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/ic_notification_placeholder" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
     <LinearLayout
-        android:layout_width="312dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="24dp"
-        android:orientation="horizontal"
-        android:paddingRight="16dp">
+        android:id="@+id/control"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:gravity="bottom|center_horizontal"
+        android:orientation="vertical">
 
-        <android.support.v7.widget.AppCompatSeekBar
-            android:id="@+id/volume"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="312dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="24dp"
+            android:orientation="horizontal"
+            android:paddingRight="16dp">
+
+            <android.support.v7.widget.AppCompatSeekBar
+                android:id="@+id/volume"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginBottom="4dp"
+                app:srcCompat="@drawable/ic_volume" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_weight="1" />
+            android:layout_marginTop="16dp"
+            android:textColor="@color/primary_text"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/hint_text"
+            android:textSize="16sp" />
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginBottom="4dp"
-            app:srcCompat="@drawable/ic_volume" />
+            android:id="@+id/action"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginBottom="32dp"
+            android:layout_marginTop="24dp"
+            android:background="?selectableItemBackgroundBorderless"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/ic_play_accent_big" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:textColor="@color/primary_text"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/subtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textColor="@color/hint_text"
-        android:textSize="16sp" />
-
-    <ImageView
-        android:id="@+id/action"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="16dp"
-        android:background="?selectableItemBackgroundBorderless"
-        android:scaleType="centerInside"
-        app:srcCompat="@drawable/ic_play_accent_big" />
-
-</LinearLayout>
+</RelativeLayout>
