--- a/app/src/main/res/layout/f_radio.xml
+++ b/app/src/main/res/layout/f_radio.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context="com.studio21.android.view.fragment.RadioFragment">
@@ -15,7 +16,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/ic_logo" />
+        app:srcCompat="@mipmap/logo" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -77,6 +78,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:textColor="@color/primary_text"
             android:textSize="20sp" />
 
@@ -85,6 +90,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:textColor="@color/hint_text"
             android:textSize="16sp" />
 
