--- a/app/src/main/res/layout/f_radio.xml
+++ b/app/src/main/res/layout/f_radio.xml
@@ -15,8 +15,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
-        android:scaleType="fitCenter"
-        app:srcCompat="@mipmap/logo" />
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/ic_logo_black" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -37,7 +37,7 @@
                 android:layout_width="280dp"
                 android:layout_height="280dp"
                 android:scaleType="fitCenter"
-                android:src="@mipmap/ic_notification_placeholder" />
+                app:srcCompat="@drawable/ic_logo_gray" />
 
         </LinearLayout>
 
